--- a/model/regression.ipynb
+++ b/model/regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
        "['/mnt/c/de/project/Advertisement-Response-Analysis/Backend/api/models/onehot_encoder.joblib']"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,12 +407,12 @@
     "\n",
     "# Drop the original categorical columns and concatenate the encoded columns\n",
     "merged_df = merged_df.drop(columns=categorical_columns)\n",
-    "merged_df = pd.concat([df, encoded_df], axis=1)"
+    "encoded_df = pd.concat([merged_df, encoded_df], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -420,16 +420,16 @@
      "output_type": "stream",
      "text": [
       "Column names of the encoded DataFrame:\n",
-      "Index(['AdPlatformName_Amazon Prime', 'AdPlatformName_Bing',\n",
-      "       'AdPlatformName_Facebook', 'AdPlatformName_Google',\n",
-      "       'AdPlatformName_Hotstar', 'AdPlatformName_Instagram',\n",
-      "       'AdPlatformName_JioTV', 'AdPlatformName_Kids Channel',\n",
-      "       'AdPlatformName_LinkedIn', 'AdPlatformName_Movie Channel',\n",
-      "       'AdPlatformName_Music Channel', 'AdPlatformName_Netflix',\n",
-      "       'AdPlatformName_News Channel', 'AdPlatformName_Snapchat',\n",
-      "       'AdPlatformName_Sports Channel', 'AdPlatformName_Threads',\n",
-      "       'AdPlatformName_Twitter', 'AdPlatformName_Yahoo',\n",
-      "       'AdPlatformName_YouTube', 'AdPlatformName_Zee5',\n",
+      "Index(['AdCost', 'PurchaseAmount', 'AdPlatformName_Amazon Prime',\n",
+      "       'AdPlatformName_Bing', 'AdPlatformName_Facebook',\n",
+      "       'AdPlatformName_Google', 'AdPlatformName_Hotstar',\n",
+      "       'AdPlatformName_Instagram', 'AdPlatformName_JioTV',\n",
+      "       'AdPlatformName_Kids Channel', 'AdPlatformName_LinkedIn',\n",
+      "       'AdPlatformName_Movie Channel', 'AdPlatformName_Music Channel',\n",
+      "       'AdPlatformName_Netflix', 'AdPlatformName_News Channel',\n",
+      "       'AdPlatformName_Snapchat', 'AdPlatformName_Sports Channel',\n",
+      "       'AdPlatformName_Threads', 'AdPlatformName_Twitter',\n",
+      "       'AdPlatformName_Yahoo', 'AdPlatformName_YouTube', 'AdPlatformName_Zee5',\n",
       "       'AdPlatformType_Search Engine', 'AdPlatformType_Social Media',\n",
       "       'AdPlatformType_Streaming', 'AdPlatformType_TV', 'AdTopic_Automobile',\n",
       "       'AdTopic_Education', 'AdTopic_Entertainment', 'AdTopic_Fashion',\n",
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -485,6 +485,8 @@
      "output_type": "stream",
      "text": [
       "Data types in merged DataFrame:\n",
+      "AdCost                           int64\n",
+      "PurchaseAmount                   int64\n",
       "AdPlatformName_Amazon Prime      int64\n",
       "AdPlatformName_Bing              int64\n",
       "AdPlatformName_Facebook          int64\n",
@@ -535,15 +537,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Click Through Rate Model - Mean Squared Error: 0.005400187119760405, R^2 Score: -1.069586995789341\n",
-      "Conversion Rate Model - Mean Squared Error: 0.0020172207815523585, R^2 Score: -0.8996726047892543\n"
+      "Click Through Rate Model - Mean Squared Error: 0.005307639814641411, R^2 Score: -1.0341188360900682\n",
+      "Conversion Rate Model - Mean Squared Error: 0.002667069726033916, R^2 Score: -1.5116533301379267\n"
      ]
     }
    ],
@@ -588,17 +590,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lasso Click Through Rate Model Accuracy: -2.29%\n",
-      "Lasso Conversion Rate Model Accuracy: -7.88%\n",
-      "Ridge Click Through Rate Model Accuracy: -73.74%\n",
-      "Ridge Conversion Rate Model Accuracy: -49.63%\n"
+      "Lasso Click Through Rate Model Accuracy: 0.68%\n",
+      "Lasso Conversion Rate Model Accuracy: -17.60%\n",
+      "Ridge Click Through Rate Model Accuracy: -68.03%\n",
+      "Ridge Conversion Rate Model Accuracy: -98.93%\n"
      ]
     }
    ],
@@ -644,15 +646,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Polynomial Click Through Rate Model Accuracy: -33.09%\n",
-      "Polynomial Conversion Rate Model Accuracy: -77.89%\n"
+      "Polynomial Click Through Rate Model Accuracy: -152689.76%\n",
+      "Polynomial Conversion Rate Model Accuracy: -698619.23%\n"
      ]
     }
    ],
@@ -684,15 +686,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Neural Network Click Through Rate Model Accuracy: -211.56%\n",
-      "Neural Network Conversion Rate Model Accuracy: -455.06%\n"
+      "Neural Network Click Through Rate Model Accuracy: -294658607.99%\n",
+      "Neural Network Conversion Rate Model Accuracy: -724651998.93%\n"
      ]
     }
    ],
@@ -720,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -729,86 +731,90 @@
      "text": [
       "Relevance of each column for predicting Click Through Rate:\n",
       "                          Feature     Relevance\n",
-      "37                    AdType_Text  8.536773e+12\n",
-      "38                   AdType_Video  8.536773e+12\n",
-      "36                  AdType_Banner  8.536773e+12\n",
-      "21    AdPlatformType_Social Media  3.800509e+12\n",
-      "20   AdPlatformType_Search Engine  3.356296e+12\n",
-      "22       AdPlatformType_Streaming  2.555234e+12\n",
-      "23              AdPlatformType_TV  1.963705e+12\n",
-      "2         AdPlatformName_Facebook  1.245274e+12\n",
-      "18         AdPlatformName_YouTube  1.245274e+12\n",
-      "16         AdPlatformName_Twitter  1.245274e+12\n",
-      "15         AdPlatformName_Threads  1.245274e+12\n",
-      "5        AdPlatformName_Instagram  1.245274e+12\n",
-      "8         AdPlatformName_LinkedIn  1.245274e+12\n",
-      "13        AdPlatformName_Snapchat  1.245274e+12\n",
-      "27                AdTopic_Fashion  1.136102e+12\n",
-      "26          AdTopic_Entertainment  1.136102e+12\n",
-      "33                 AdTopic_Sports  1.136102e+12\n",
-      "30             AdTopic_Healthcare  1.136102e+12\n",
-      "32            AdTopic_Real Estate  1.136102e+12\n",
-      "28                AdTopic_Finance  1.136102e+12\n",
-      "31              AdTopic_Political  1.136102e+12\n",
-      "35                 AdTopic_Travel  1.136102e+12\n",
-      "34             AdTopic_Technology  1.136102e+12\n",
-      "25              AdTopic_Education  1.136102e+12\n",
-      "29                   AdTopic_Food  1.136102e+12\n",
-      "24             AdTopic_Automobile  1.136102e+12\n",
-      "1             AdPlatformName_Bing  8.010617e+11\n",
-      "17           AdPlatformName_Yahoo  8.010617e+11\n",
-      "3           AdPlatformName_Google  8.010617e+11\n",
-      "10   AdPlatformName_Music Channel  5.915289e+11\n",
-      "7     AdPlatformName_Kids Channel  5.915289e+11\n",
-      "9    AdPlatformName_Movie Channel  5.915289e+11\n",
-      "12    AdPlatformName_News Channel  5.915289e+11\n",
-      "14  AdPlatformName_Sports Channel  5.915289e+11\n",
-      "11         AdPlatformName_Netflix  2.794957e-02\n",
-      "6            AdPlatformName_JioTV  2.748784e-02\n",
-      "19            AdPlatformName_Zee5  2.229042e-02\n",
-      "0     AdPlatformName_Amazon Prime  1.692123e-02\n",
-      "4          AdPlatformName_Hotstar  2.587995e-03\n",
+      "26             AdTopic_Automobile  5.940383e-02\n",
+      "29                AdTopic_Fashion  5.326989e-02\n",
+      "15        AdPlatformName_Snapchat  3.805990e-02\n",
+      "3             AdPlatformName_Bing  3.726038e-02\n",
+      "31                   AdTopic_Food  3.539511e-02\n",
+      "8            AdPlatformName_JioTV  3.529130e-02\n",
+      "5           AdPlatformName_Google  3.131084e-02\n",
+      "28          AdTopic_Entertainment  2.707958e-02\n",
+      "4         AdPlatformName_Facebook  2.683423e-02\n",
+      "16  AdPlatformName_Sports Channel  2.552322e-02\n",
+      "27              AdTopic_Education  2.534501e-02\n",
+      "13         AdPlatformName_Netflix  2.261111e-02\n",
+      "12   AdPlatformName_Music Channel  2.149003e-02\n",
+      "20         AdPlatformName_YouTube  2.098853e-02\n",
+      "32             AdTopic_Healthcare  1.874538e-02\n",
+      "38                  AdType_Banner  1.770093e-02\n",
+      "35                 AdTopic_Sports  1.735190e-02\n",
+      "21            AdPlatformName_Zee5  1.678884e-02\n",
+      "2     AdPlatformName_Amazon Prime  1.666220e-02\n",
+      "24       AdPlatformType_Streaming  1.522794e-02\n",
+      "14    AdPlatformName_News Channel  1.495314e-02\n",
+      "25              AdPlatformType_TV  1.457595e-02\n",
+      "7        AdPlatformName_Instagram  1.316437e-02\n",
+      "10        AdPlatformName_LinkedIn  1.279601e-02\n",
+      "36             AdTopic_Technology  1.264689e-02\n",
+      "9     AdPlatformName_Kids Channel  1.214436e-02\n",
+      "39                    AdType_Text  9.255044e-03\n",
+      "34            AdTopic_Real Estate  9.097438e-03\n",
+      "40                   AdType_Video  8.445885e-03\n",
+      "30                AdTopic_Finance  8.323359e-03\n",
+      "18         AdPlatformName_Twitter  8.311186e-03\n",
+      "17         AdPlatformName_Threads  8.169356e-03\n",
+      "11   AdPlatformName_Movie Channel  7.733983e-03\n",
+      "19           AdPlatformName_Yahoo  5.580563e-03\n",
+      "6          AdPlatformName_Hotstar  5.542895e-03\n",
+      "37                 AdTopic_Travel  2.810275e-03\n",
+      "33              AdTopic_Political  1.733571e-03\n",
+      "22   AdPlatformType_Search Engine  3.689740e-04\n",
+      "23    AdPlatformType_Social Media  2.830194e-04\n",
+      "0                          AdCost  6.991222e-06\n",
+      "1                  PurchaseAmount  3.453721e-07\n",
       "Relevance of each column for predicting Conversion Rate:\n",
-      "                          Feature     Relevance\n",
-      "37                    AdType_Text  2.172814e+12\n",
-      "38                   AdType_Video  2.172814e+12\n",
-      "36                  AdType_Banner  2.172814e+12\n",
-      "21    AdPlatformType_Social Media  9.673209e+11\n",
-      "20   AdPlatformType_Search Engine  8.542581e+11\n",
-      "22       AdPlatformType_Streaming  6.503686e+11\n",
-      "23              AdPlatformType_TV  4.998103e+11\n",
-      "13        AdPlatformName_Snapchat  3.169523e+11\n",
-      "16         AdPlatformName_Twitter  3.169523e+11\n",
-      "2         AdPlatformName_Facebook  3.169523e+11\n",
-      "5        AdPlatformName_Instagram  3.169523e+11\n",
-      "15         AdPlatformName_Threads  3.169523e+11\n",
-      "18         AdPlatformName_YouTube  3.169523e+11\n",
-      "8         AdPlatformName_LinkedIn  3.169523e+11\n",
-      "26          AdTopic_Entertainment  2.891652e+11\n",
-      "24             AdTopic_Automobile  2.891652e+11\n",
-      "35                 AdTopic_Travel  2.891652e+11\n",
-      "29                   AdTopic_Food  2.891652e+11\n",
-      "32            AdTopic_Real Estate  2.891652e+11\n",
-      "28                AdTopic_Finance  2.891652e+11\n",
-      "33                 AdTopic_Sports  2.891652e+11\n",
-      "27                AdTopic_Fashion  2.891652e+11\n",
-      "31              AdTopic_Political  2.891652e+11\n",
-      "25              AdTopic_Education  2.891652e+11\n",
-      "30             AdTopic_Healthcare  2.891652e+11\n",
-      "34             AdTopic_Technology  2.891652e+11\n",
-      "1             AdPlatformName_Bing  2.038895e+11\n",
-      "3           AdPlatformName_Google  2.038895e+11\n",
-      "17           AdPlatformName_Yahoo  2.038895e+11\n",
-      "14  AdPlatformName_Sports Channel  1.505583e+11\n",
-      "7     AdPlatformName_Kids Channel  1.505583e+11\n",
-      "9    AdPlatformName_Movie Channel  1.505583e+11\n",
-      "10   AdPlatformName_Music Channel  1.505583e+11\n",
-      "12    AdPlatformName_News Channel  1.505583e+11\n",
-      "11         AdPlatformName_Netflix  3.365630e-02\n",
-      "6            AdPlatformName_JioTV  2.177961e-02\n",
-      "19            AdPlatformName_Zee5  2.061981e-02\n",
-      "4          AdPlatformName_Hotstar  2.027816e-02\n",
-      "0     AdPlatformName_Amazon Prime  1.868025e-03\n"
+      "                          Feature  Relevance\n",
+      "15        AdPlatformName_Snapchat   0.063527\n",
+      "10        AdPlatformName_LinkedIn   0.042847\n",
+      "28          AdTopic_Entertainment   0.038000\n",
+      "13         AdPlatformName_Netflix   0.031128\n",
+      "8            AdPlatformName_JioTV   0.028046\n",
+      "21            AdPlatformName_Zee5   0.023843\n",
+      "6          AdPlatformName_Hotstar   0.022998\n",
+      "16  AdPlatformName_Sports Channel   0.020990\n",
+      "36             AdTopic_Technology   0.019138\n",
+      "3             AdPlatformName_Bing   0.018663\n",
+      "32             AdTopic_Healthcare   0.017818\n",
+      "38                  AdType_Banner   0.014054\n",
+      "18         AdPlatformName_Twitter   0.013604\n",
+      "14    AdPlatformName_News Channel   0.012674\n",
+      "7        AdPlatformName_Instagram   0.012673\n",
+      "17         AdPlatformName_Threads   0.012357\n",
+      "11   AdPlatformName_Movie Channel   0.012212\n",
+      "19           AdPlatformName_Yahoo   0.011801\n",
+      "37                 AdTopic_Travel   0.011270\n",
+      "26             AdTopic_Automobile   0.010417\n",
+      "29                AdTopic_Fashion   0.009878\n",
+      "20         AdPlatformName_YouTube   0.009597\n",
+      "24       AdPlatformType_Streaming   0.009369\n",
+      "39                    AdType_Text   0.008264\n",
+      "27              AdTopic_Education   0.007686\n",
+      "40                   AdType_Video   0.005791\n",
+      "22   AdPlatformType_Search Engine   0.005725\n",
+      "2     AdPlatformName_Amazon Prime   0.005442\n",
+      "33              AdTopic_Political   0.005185\n",
+      "4         AdPlatformName_Facebook   0.004336\n",
+      "9     AdPlatformName_Kids Channel   0.004040\n",
+      "23    AdPlatformType_Social Media   0.003992\n",
+      "31                   AdTopic_Food   0.001814\n",
+      "35                 AdTopic_Sports   0.001750\n",
+      "5           AdPlatformName_Google   0.001137\n",
+      "25              AdPlatformType_TV   0.000348\n",
+      "12   AdPlatformName_Music Channel   0.000204\n",
+      "34            AdTopic_Real Estate   0.000124\n",
+      "30                AdTopic_Finance   0.000077\n",
+      "0                          AdCost   0.000017\n",
+      "1                  PurchaseAmount   0.000006\n"
      ]
     }
    ],
@@ -849,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
